force-app/main/default/_metadata/objects/ALP_Cell__c/ALP_Cell__c.object-meta.xml
<CustomObject>
    <label>ALP Cell</label>
    <nameField>
        <displayFormat>ACN-{YYYY}{MM}{DD}-{00000000}</displayFormat>
        <label>ALP Cell Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ALP Cells</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>