force-app/main/default/_metadata/objects/ALP_Cell__c/fields/Contains_Mine__c.field-meta.xml
<CustomField>
    <fullName>Contains_Mine__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contains Mine</label>
    <type>Checkbox</type>
</CustomField>