force-app/main/default/_metadata/objects/ALP_Cell__c/fields/Row__c.field-meta.xml
<CustomField>
    <fullName>Row__c</fullName>
    <label>Row</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>