force-app/main/default/_metadata/objects/ALP_Cell__c/fields/Stone_Colour__c.field-meta.xml
<CustomField>
    <fullName>Stone_Colour__c</fullName>
    <label>Stone Colour</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Black</fullName>
            </value>
            <value>
                <fullName>White</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>